--- a/.env
+++ b/.env
@@ -20,14 +20,14 @@
 # APP
 #--------------------------------------------------------------------
 
-app.baseURL = 'http://localhost:8080'
+app.baseURL = 'http://localhost:8080/'
 app.forceGlobalSecureRequests = false
 
 app.sessionDriver = 'CodeIgniter\Session\Handlers\FileHandler'
 app.sessionCookieName = 'ci_session'
-app.sessionExpiration = 7200
-app.sessionSavePath = null
-app.sessionMatchIP = false
+app.sessionExpiration = 7200 # 2 hours
+# app.sessionSavePath = null
+app.sessionMatchIP = true
 app.sessionTimeToUpdate = 300
 app.sessionRegenerateDestroy = false
 
