update reset pass, send maill system

--- a/env.example
+++ b/env.example
@@ -14,6 +14,7 @@
 # ENVIRONMENT
 #--------------------------------------------------------------------
 
+CI_ENVIRONMENT = development
 # CI_ENVIRONMENT = production
 
 #--------------------------------------------------------------------
@@ -33,12 +34,16 @@ app.sessionRegenerateDestroy = false
 
 app.CSPEnabled = false
 
+email.SMTPUser='successmore_ticket@hotmail.com'
+email.SMTPPass='successmore-being1665'
+EMAIL_NAME='Programmer'
+
 #--------------------------------------------------------------------
 # DATABASE
 #--------------------------------------------------------------------
 
 database.default.hostname = 127.0.0.1
-database.default.database = ci4
+database.default.database = ticket_support
 database.default.username = root
 database.default.password = 
 database.default.DBDriver = MySQLi
