update ticket page and process send mail

--- a/env.example
+++ b/env.example
@@ -33,7 +33,7 @@ app.sessionTimeToUpdate = 300
 app.sessionRegenerateDestroy = false
 
 app.CSPEnabled = false
-
+EMAIL_IT_GROUP='ITGroup@successmore.com'
 email.SMTPUser='successmore_ticket@hotmail.com'
 email.SMTPPass='successmore-being1665'
 EMAIL_NAME='Programmer'
