update modal ticket detail in admin page 50/50

--- a/env.example
+++ b/env.example
@@ -34,7 +34,7 @@ app.sessionRegenerateDestroy = false
 
 app.CSPEnabled = false
 EMAIL_IT_GROUP='ITGroup@successmore.com'
-EMAIL_IT_GROUP='Nattapon.Ph@successmore.com'
+EMAIL_TEST='Nattapon.Ph@successmore.com'
 email.SMTPUser='successmore_ticket@hotmail.com'
 email.SMTPPass='successmore-being1665'
 EMAIL_NAME='Programmer'
