fixed bug on server

--- a/env.example
+++ b/env.example
@@ -31,13 +31,27 @@ app.sessionExpiration = 7200
 app.sessionMatchIP = false
 app.sessionTimeToUpdate = 300
 app.sessionRegenerateDestroy = false
-
 app.CSPEnabled = false
+
+# --------------------------------------------------------------------
+# EMAIL
+# --------------------------------------------------------------------
+
+# The mail sending protocol: mail, sendmail, smtp
+email.protocol='sendmail'
+email.SMTPHost=''
+email.SMTPPort='587'
+# SMTP Encryption. Either tls or ssl
+email.SMTPCrypto='tls'
+# Type of mail, either 'text' or 'html'
+email.mailType='html'
+email.SMTPUser='support@successmore.com'
+email.SMTPPass='Scm#1234'
+# email.SMTPUser='successmore.ticket@gmail.com'
+# email.SMTPPass='successmore-being1665'
 EMAIL_IT_GROUP='ITGroup@successmore.com'
 EMAIL_TEST='Nattapon.Ph@successmore.com'
-email.SMTPUser='successmore_ticket@hotmail.com'
-email.SMTPPass='successmore-being1665'
-EMAIL_NAME='Programmer'
+EMAIL_NAME='Ticket Support'
 
 #--------------------------------------------------------------------
 # DATABASE
